--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h3{
 }
 
 /* Buttons */
+
 .clicky{
     font-size: 28px;
     font-family: Helvetica, Times New Roman, sans-serif;
@@ -37,7 +38,11 @@ h3{
     border: none;
     padding: 5px 15px;
     margin-top: 10px;
-    display: block;
+    margin: auto;
+    display:inline-table;
+    /* align-items: center;
+    align-self: center;
+    align-content: center; */
 }
 .clicky.one{
     background-color: black;
@@ -92,4 +97,40 @@ background-color: yellow;
 font-size: 20px;
 text-align: center;
 }
+/* CSS Methods */
 
+.para,
+.small-para {
+  color: hsl(0, 100%, 50%);
+}
+
+.para.small-para {
+  font-size: 12px;
+}
+
+.para {
+  font-size: 22px;
+}
+
+#confirm-button {
+  background: green;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+} 
+
+.cancel {
+  background-color: #ffc0cb;
+  color: black;
+  font-size: 20px;
+}
+
+.child {
+  color: red;
+  font-size: 14px;
+}
+
+.div.text {
+  color: green;
+  font-size: 28px;
+}
